# kio-gallery3

./: AUTHORS  CHANGELOG  CMakeLists.txt  INSTALLATION  README  TODO  kio-gallery3.spec
po/: CMakeLists.txt  kio-gallery3.pot  messages.sh
src/: CMakeLists.txt  about_gallery3.data  about_gallery3s.data  gallery3.about  gallery3.protocol  gallery3s.protocol  kio_gallery3.cpp  kio_gallery3_protocol.cpp  kio_gallery3_protocol.h  kio_protocol.cpp
src/entity/: g3_collection.cpp  g3_collection.h  g3_entity.cpp  g3_entity.h  g3_file.h  g3_item.cpp  g3_item.h  g3_type.h
src/gallery3/: g3_backend.cpp  g3_backend.h  g3_request.cpp  g3_request.h
src/json/: g3_json.cpp  g3_json.h
src/protocol/: kio_gallery3_protocol.cpp  kio_gallery3_protocol.h  kio_protocol.cpp  kio_protocol.h  kio_protocol_gallery3.cpp  kio_protocol_gallery3.h
src/utility/: debug.h  defines.h  exception.h
